_sass/theme/_resume.scss
/* --------------------------------------------------------
			Resume Header
-------------------------------------------------------- */
.resume {
	.post-header {
		display: grid;
		// grid-template-columns: repeat(16,1fr);
		// max-width: 2000px;
		// margin: 0 auto 4rem auto;
		width: unset;
		margin-bottom: 4rem;
		padding: 0;
		max-width: unset;
		margin-left: 0;
		margin-right: 0;
		grid-gap: 0;
		@include media-query($shmedium) {
			max-width: unset;
		}
		@include media-query($regular) {
			width: calc(1024px - (8px * 8));
			margin-left: auto;
			margin-right: auto;
		}
	}
	.post-meta {
		max-width: 980px; 
		margin-left: 0;
		grid-template-columns: 1fr;
		grid-template-rows: 1fr;
		grid-row-gap: .5rem;		
		@include media-query($shmedium) {
			grid-template-columns: 140px 3fr;
			grid-template-rows: .3fr .3fr .2fr;
			grid-column-gap: 3rem;
		}
		@include media-query($medium) {
			margin-left: auto;
			margin-right: auto;
			grid-column-gap: 1.5rem;
			grid-template-columns: 8.5rem auto 1fr auto;
		}
	}
	.coin { 
		height: 153px;
		width: 153px;
		margin-top: 10px;
		margin-left: 2px;
	}
	.profile {
		max-height: unset;
		max-width: unset;
		height: 140px;
		width: 140px;
		border-radius: 100%;
		clip-path: url(#coin-path);
		-webkit-clip-path: url(#coin-path);
		margin: 18px 0 1rem 10px;
		grid-column: 1;
		grid-row: 1 / 2;
		@include media-query($shmedium) {
			grid-column: 1 / 2;
			grid-row: 1 / 4;
			margin: 18px 0 0 10px;
		}
		img {
			margin: 0;
			max-height: 140px;
			max-width: 140px;
			clip-path: url(#coin-path);
			-webkit-clip-path: url(#coin-path);
		}
	}
	h1 {
		grid-column: 1;
		grid-row: 2 / 3;
		margin: 0;
		@include media-query($shmedium) {
			grid-column: 2 / 3;
			grid-row: 1 / 2;
		}
		@include media-query($medium) {
			grid-column: 2 / 5;
		}
	}
	.article-subtitle {
		@include fluid-type($min_width, $max_width, $min_font, $max_font);
		line-height: 1.6rem;
		margin: 0;
		grid-column: 1;
		grid-row: 3 / 4;
		margin-bottom: 1rem;
		@include media-query($shmedium) {
			grid-column: 2 / 3;
			grid-row: 2 / 3;			
		}
		@include media-query($medium) {
			grid-column: 2 / 5;
		}
	}
	.resume-meta {
		font-size: 1rem;
		color: v(text-lighter);
		margin: 0;		
		a {
			margin: 0 .5rem;						
		}
		& > img:first-child {			
			margin-left: 0;
			&:hover {
				cursor: default;
			}
		}
		img {
			vertical-align: baseline;
		}
	}
	.info {
		grid-column: 1;
		grid-row: 4 / 5;
		@include media-query($shmedium) {
			grid-column: 2 / 3;
			grid-row: 3 / 4;
		}
		a:first-of-type {
			margin: 0 0 0 1.5rem;			
		}
		img {
			margin-right: .2rem;
		}
	}
	.social {
		grid-column: 1;		
		grid-row: 5 / 6;
		@include media-query($shmedium) {
			grid-column: 2 / 3;
			grid-row: 4 / 5;
		}
		@include media-query($medium) {
			grid-column: 3 / 4;
			grid-row: 3 / 4;
		}
		a:first-of-type {
			margin-left: 0;
		}
	}
	.svg {
		border-radius: 0;
		display: inline;		
		max-height: 1rem;
		max-width: 1rem;
		margin: 0;
		position: relative;
		top: .14rem;
		&:hover {
			cursor: pointer;
		}	
	}	
}
/* --------------------------------------------------------
			Resume Content
-------------------------------------------------------- */
.resume {
	.post-content {
		> * {
			width: unset;
			@include grid-offset;
		}
	}
	h5 {
		margin-top: 3.5rem;
		margin-bottom: 1.5rem;
		&:first-of-type {
			margin-top: 0;
		}
		&:nth-of-type(2) {
			margin-top: 0;
		}
	}
}
/* --------------------------------------------------------
			Table of Contents
-------------------------------------------------------- */
.resume {
	.toc-aside {
		@include grid-offset-sidebar;
		opacity: .4;
		transition: .3s;
		font-family: $Monospace;
		&:hover {
			opacity: 1;
		}
		nav {
			position: sticky;	
			top: 15rem;
			h4 {
				margin-bottom: .5rem;
			font-family: $Monospace;
			}
			li {
				font-size: .65rem;
				margin-left: .65rem;
				&:before {
					margin-top: .35rem;
					margin-left: -.65rem;
				}
				a {
					font-size: .65rem;
					padding: 0;
					background: initial;
					&:hover {
						background: initial;
					}
				}
			}
		}
	}
}
/* --------------------------------------------------------
			Work Experience
-------------------------------------------------------- */
.job-title {
	margin-bottom: .5rem;	
	padding-left: 2.25rem;
    background-repeat: no-repeat;
    background-size: 1.72rem 1.72rem;
	background-position: left center;
}
/* Company Logos */
#chilipiper {
	background-image: url(/assets/images/svg/chilipiper.svg);
}
#servicetitan {
	background-image: url(/assets/images/svg/servicetitan-dark.svg);
}
#eyemagine {
	background-image: url(/assets/images/svg/eyemagine.svg);
}
#paquettemarketing {
	background-image: url(/assets/images/svg/logo.svg);
	background-size: 2.5rem 1.85rem;
	padding-left: 2.5rem;
}
#csuf {
	background-image: url(/assets/images/csuf.png);
}
.resume .job-title h2 {
	display: inline;
	padding-left: 0;		
}
.resume h3 {
	margin-bottom: 0;
}
.job-info, .position-info {
	p {
		font-size: .85rem;
		margin-bottom: 24px;
	}
	svg {
		fill: v(text-lighter);
		vertical-align: middle;
		width: 16px;
		height: 16px;
		margin-right: 6px;
		&:nth-child(2) {
			margin-left: 32px;
		}
	}
}
.job-info {
	display: grid;
	grid-template-columns: auto auto 1fr;
	grid-template-rows: 1fr;
	grid-column-gap: 1rem;
	font-size: .75rem;
	margin-bottom: 1.5rem;
	.job-time {
		display: inline;
		grid-column: 1 / 4;
		grid-row: 1 / 2;
		margin: 0;
		padding: 0;
	}	
	.job-loc {
		display: inline;
		grid-column: 1 / 2;
		grid-row: 2 / 3;
		margin: 0;
		padding: 0;
	}
	.job-url {
		grid-column: 2 / 3;
		grid-row: 2 / 3;
		a {
			background-color: inherit;
			padding: 0;
			font-size: .75rem;
		}
	}
	.job-degree {
		grid-row: 3;
		grid-column: 1 / 4;
	}
}
.rec-art + .accordion-wrapper {
    margin-top: 1rem;
}
.accordion-wrapper {
	margin-bottom: 3rem;
	p.accordion-item-heading {
		color: v(brand);
		fill: v(brand);
		svg {
			height: 36px;
			width: 36px;
			padding-left: 12px;
			vertical-align: middle;
		}
	}
}
/* --------------------------------------------------------
			Case Study Cards
-------------------------------------------------------- */
/* Below only applicable to using the include article-cards.html on resume.md */
.resume {
	.featured-articles {
		padding-top: .5rem;
		margin-bottom: 1rem;
		grid-column: 1 / 17;
		// @include media-query($medium) {
		// 	grid-column: 2 / 16;
		// }
		> div {
			margin: 0 auto;
			max-width: unset !important; // why is the other stylie im overwriting important?
		}
		@include media-query($medium) {
			padding: 1rem;
		}
	}
	.featured-article-header {
		justify-content: flex-end;
	}
	ul.post-list {
		@include media-query($medium) {
			// grid-template-rows: 1fr;
			display: flex;
			flex-wrap: wrap;
			justify-content: center;
			align-items: flex-start;
			align-content: flex-start;
		}
	}
	.post-list li:before {
		content: none;
	}
	.post-list li:first-child {
		margin-left: 1rem;
		@include media-query($medium) {
			padding: 0;
		}
	}
	.post-list li {
		width: 330px !important;
		
		margin: .5rem !important;
		padding-bottom: 0;
		@include media-query($medium) {
			height: 280px !important;
		}
	}
	h3 a {
		color: v(brand);
	}
	.container-overflow {
		display: unset;
	}
}
/* --------------------------------------------------------
			Recommendations
-------------------------------------------------------- */
.resume {
	.testimonial {
		border: .1rem solid v(blockquote);
		box-shadow: 0.35rem 0.35rem 0 v(blockquote);
		border-radius: 3px;
		margin-bottom: 2rem;
		> p {
			padding: .75rem 2rem;
			margin: 0;
			max-width: fit-content;
			font-style: italic;    
			font-size: .9rem;
			font-weight: 200;
		}
	}
	ul.testimonial-author {
		display: grid;
		grid-template-columns: 1fr 1fr;
		border-top: 0.1rem solid v(blockquote);
		margin: 0 2rem;
		padding: .75rem 0 1rem;
		font-weight: bold;
		li:before {
			display: none;		
		}
		li {
			font-family: $Monospace;
			font-size: .65rem;
			margin: 0;
			padding-right: .5rem;
		}
	}
	.testimonial-author-photos {
		display: flex;
		flex-wrap: wrap;
	}	
	.author-photo {
		margin: 0 1rem 1rem 0;
		position: relative;
		.coin {
			@include coingold;
		}
		figure {
			@include coinphoto;
		}
	}
}

